css/style.scss
/* ... */
#player {
   position: relative;
   height: 100dvh;

   button#playButton {
      transition: all 250ms ease-in-out;

      &:has(.icon-pause) {
         background-color: var(--play-button);
         border-color: var(--play-button-border);

         &:hover,
         &:focus {
            background: var(--play-button-border);
         }

      }

      &:has(.spinner-grow) {
         background: var(--spinner-bg);
         border-color: var(--spinner-border);

         i {
            color: var(--bs-body-color) !important;
         }
      }

   }

   & p::before,
   & a::before {
      display: inline-block;
      text-rendering: auto;
      -webkit-font-smoothing: antialiased;
      margin-right: .5rem;
      font-size: 1rem !important;
      opacity: .7;
      font-weight: 200 !important;
   }

   & p:empty::before,
   & a:empty::before {
      opacity: 0;
   }

   .metainfo p {
      overflow: hidden;
      width: 100%;
      display: block;
      margin-bottom: .5rem;
      font-size: clamp(16px, 15.231px + 0.192vw, 18px);

      &.h3 {
         font-size: clamp(22px, 15.662px + 1.69vw, 40px);
      }

      &.h4 {
         font-size: clamp(16px, 11.07px + 1.315vw, 30px);
      }

   }

   #title {
      &::before {
         font-family: 'iconfont';
         content: '\e904';
      }

   }

   #artist {
      &::before {
         font-family: 'iconfont';
         content: '\e90b';
      }

   }

   #album {
      height: auto;
      transition: height 250ms ease-in-out;

      &::before {
         font-family: 'iconfont';
         content: '\e90c';
      }

      &:empty {
         height: 0;
      }

   }

   #listeners {
      border: 1px dashed hsla(255, 255%, 255%, .25);
      border-width: 1px 0;
      margin: 0 0 .5rem;
      padding: .5rem 0;

      &:empty {
         border-color: transparent;

         &:before {
            content: '';
            height: 0;
         }

      }

      &::before {
         font-family: 'iconfont';
         content: '\e90a';
      }

   }

   #radioNameLink {
      background: transparent;
      border: 0;
      display: block;
      color: rgb(225, 225, 225);

      &[href]:empty {
         background-color: transparent;
         border-color: transparent;
      }

      & span {
         display: inline; opacity: 1; transition: all 250ms ease-in-out;

         &::before {
            font-family: 'iconfont';
            font-weight: 100;
            margin:0 .5rem 0 1rem;
            opacity: .6;
         }

         &#radioName:before {
            content: '\e90d';
         }

         &#stationLocation:before {
            content: '\e903';
         }

         &:empty {
            opacity: 0;
         }

      }

   }

   .media-controls-wrapper {
      width: 100%;
      position: absolute;
      bottom: 0;
      left:0;
      left:0;
      background: var(--sidebar-headers);

      .media-controls {
         display: flex;
         padding: 0 !important;
         height: 4rem;
         max-width: 1000px;
         margin: 0 auto;


         button {
            flex-grow: 1;
            max-height: 4rem;
            margin: 0 !important;
            border-radius: 0;
            font-size: 1.75rem;
            background: var(--sidebar-bg);
            color: var(--bs-body-color);
            border-color: var(--btn-border-color);
            border-width: 0 1px;
            border-collapse: collapse;
         }

      }

   }

}

#webamp {
   position: relative;
   top: -2rem;
   transition: all .3s ease-in;
   max-height: 500px;
   overflow: hidden;
}

#metadata {
   height: calc(100dvh - 4rem);
   display: flex;

   .playermeta {
      align-items: center;
      justify-content: space-around;
      align-content: center;
      text-align: center;
      display: flex;
      height: calc(100dvh - 4rem);
      max-width: 1400px;
      margin: 0 auto;
   }

}

.metainfo {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;

   >* {
      min-height: 1.5rem;
   }

   h4#title {
      font-weight: bold;
   }

   p, span {
      color: var(--bs-body-color);
   }


}

h3.sidebar-text {
   position: sticky;
   top: 0;
   background: var(--sidebar-headers);
   display: block; 
   width:auto;
   padding: .5rem;
   z-index: 100;
   margin-bottom:0;
   color: var(--bs-body-color);
}

nav.stationNav {
   height: calc(100dvh - 4rem);
   position: relative;
   left: 0;
   padding: 0;

   .loader {
      width:100%;
      text-align: center;
      vertical-align: middle;
      height: 70dvh;
      line-height: 70dvh;

      .spinner-grow {
         height:5rem;
         width: 5rem;
      }
   }

   #stationSelect {
      overflow-y: scroll;
      height: calc(100dvh - 6.5rem); 
      padding-bottom: .5rem;
      scrollbar-color: rgba(255,255,255,.3) rgba(0,0,0,0);
      scrollbar-width: thin;
   }


   a {
      text-decoration: none;
   }

   button {
      padding: .4rem .5rem .4rem 1rem;
      font-size: clamp(17px, 15.592px + 0.376vw, 21px);
      transition: all 250ms ease-in-out;
      color: var(--bs-body-color);
      display: block;
      width: 100%;
      background: var(--sidebar-bg);
      border-radius: .5rem 0 0 .5rem;
      margin:.5rem 0 0;
      border:0;
      text-align:left;

      &:has(input:checked) {
         background: rgb(36, 27, 196);
         background: var(--sidebar-gradient);
         padding: 1rem .5rem 1rem 2rem;
         font-weight: 700;
      }

      input[type="radio"] {
         display: none;
      }

   }

}

input[type="checkbox"]:checked~nav.stationNav {
   transform: translateX(0);
   z-index: 40;
}

input[type="checkbox"] {
   box-sizing: border-box;
   display: none;
   transition: all 0.25s;
}
/* ... */

